[gd_scene load_steps=7 format=4 uid="uid://by7mnayrkygvi"]

[ext_resource type="Script" uid="uid://q3wxccmcs3jn" path="res://level_1_map.gd" id="1_1rjl6"]
[ext_resource type="TileSet" uid="uid://x6pdxpri3xpm" path="res://Assets/tilesets/ground.tres" id="1_gcyph"]
[ext_resource type="TileSet" uid="uid://6vyabwpm5mnj" path="res://Assets/tilesets/ground_decoration.tres" id="2_1rjl6"]
[ext_resource type="TileSet" uid="uid://y7ikibeptv3b" path="res://Assets/tilesets/building_obstacles.tres" id="3_u2bwb"]
[ext_resource type="TileSet" uid="uid://bnabe8xgscf7b" path="res://Assets/tilesets/building_decoration.tres" id="4_ymuvs"]
[ext_resource type="TileSet" uid="uid://bafg07nk2nqhk" path="res://Assets/tilesets/decoration.tres" id="5_ly7i8"]

[node name="level1_map" type="Node"]
script = ExtResource("1_1rjl6")

[node name="tile_layers" type="Node" parent="."]

[node name="ground" type="TileMapLayer" parent="tile_layers"]
tile_map_data = PackedByteArray("AAAAAAAAAwAAAAAAAAAAAAEAAwAAAAEAAAAAAAIAAwAAAAIAAAAAAAMAAwAAAAMAAAABAAAAAwABAAAAAAABAAEAAwABAAEAAAABAAIAAwACAAIAAAABAAMAAwACAAMAAAACAAAAAwACAAAAAAACAAEAAwACAAEAAAACAAIAAwACAAIAAAACAAMAAwACAAMAAAADAAAAAwADAAAAAAADAAEAAwADAAEAAAADAAIAAwADAAIAAAADAAMAAwADAAMAAAAEAAAAAwACAAAAAAAEAAEAAwACAAEAAAAEAAIAAwACAAIAAAAEAAMAAwACAAMAAAAFAAAAAwADAAAAAAAFAAEAAwADAAEAAAAFAAIAAwADAAIAAAAFAAMAAwADAAMAAAAAAAQAAwAAAAIAAAAAAAUAAwAAAAMAAAAAAAYAAwAAAAIAAAAAAAcAAwAAAAMAAAAAAAgAAwAAAAIAAAAAAAkAAwAAAAMAAAAAAAoAAwAAAAIAAAAAAAsAAwAAAAMAAAAAAAwAAwAAAAIAAAAAAA0AAwAAAAMAAAAAAA4AAwAAAAIAAAAAAA8AAwAAAAMAAAAAABAAAwAAAAQAAAAAABEAAwAAAAUAAAAAABQAAwAAAAAAAAAAABUAAwAAAAEAAAAAABYAAwAAAAIAAAAAABcAAwAAAAMAAAABAAQAAwABAAIAAAABAAUAAwABAAMAAAABAAYAAwACAAIAAAABAAcAAwACAAMAAAABAAgAAwACAAIAAAABAAkAAwABAAMAAAABAAoAAwABAAIAAAABAAsAAwABAAMAAAABAAwAAwABAAIAAAABAA0AAwABAAMAAAABAA4AAwABAAIAAAABAA8AAwABAAMAAAABABAAAwABAAQAAAABABEAAwABAAUAAAABABQAAwABAAAAAAABABUAAwABAAEAAAABABYAAwABAAIAAAABABcAAwABAAMAAAACAAQAAwACAAIAAAACAAUAAwACAAMAAAACAAYAAwADAAIAAAACAAcAAwADAAMAAAACAAgAAwADAAIAAAACAAkAAwADAAMAAAACAAoAAwADAAIAAAACAAsAAwADAAMAAAACAAwAAwADAAIAAAACAA0AAwADAAMAAAACAA4AAwADAAIAAAACAA8AAwADAAMAAAACABAAAwADAAQAAAACABEAAwADAAUAAAACABQAAwACAAAAAAACABUAAwACAAEAAAACABYAAwADAAIAAAACABcAAwADAAMAAAADAAQAAwADAAIAAAADAAUAAwADAAMAAAADAAYAAwACAAIAAAADAAcAAwACAAMAAAADAAgAAwACAAIAAAADAAkAAwACAAMAAAADAAoAAwACAAIAAAADAAsAAwACAAMAAAADAAwAAwACAAIAAAADAA0AAwACAAMAAAADAA4AAwACAAIAAAADAA8AAgACAAMAAAADABAAAwACAAQAAAADABEAAwACAAUAAAADABQAAwADAAAAAAADABUAAwADAAEAAAADABYAAwACAAIAAAADABcAAwACAAMAAAAEAAQAAwACAAIAAAAEAAUAAwACAAMAAAAEAAYAAwADAAIAAAAEAAcAAwADAAMAAAAEAAgAAwADAAIAAAAEAAkAAwADAAMAAAAEAAoAAwADAAIAAAAEAAsAAwADAAMAAAAEAAwAAwACAAIAAAAEAA0AAwACAAMAAAAEAA4AAwADAAIAAAAEAA8AAwADAAMAAAAEABAAAwADAAQAAAAEABEAAwADAAUAAAAEABQAAwACAAAAAAAEABUAAwACAAEAAAAEABYAAwADAAIAAAAEABcAAwADAAMAAAAFAAQAAwADAAIAAAAFAAUAAwADAAMAAAAFAAYAAwACAAIAAAAFAAcAAwACAAMAAAAFAAgAAwACAAIAAAAFAAkAAwACAAMAAAAFAAoAAwACAAIAAAAFAAsAAwACAAMAAAAFAAwAAwADAAIAAAAFAA0AAwADAAMAAAAFAA4AAwACAAIAAAAFAA8AAwACAAMAAAAFABAAAwACAAQAAAAFABEAAwACAAUAAAAFABQAAwADAAAAAAAFABUAAwADAAEAAAAFABYAAwACAAIAAAAFABcAAwACAAMAAAAGAAAAAwACAAAAAAAGAAEAAwACAAEAAAAGAAIAAwACAAIAAAAGAAMAAwACAAMAAAAGAAQAAgACAAIAAAAGAAUAAwACAAMAAAAGAAYAAwADAAIAAAAGAAcAAwADAAMAAAAGAAgAAwADAAIAAAAGAAkAAwADAAMAAAAGAAoAAwADAAIAAAAGAAsAAwADAAMAAAAGAAwAAwACAAIAAAAGAA0AAwACAAMAAAAGAA4ABgABAAIAAAAGAA8AAwADAAMAAAAGABAAAwABAAQAAAAGABEAAwADAAUAAAAGABQAAwACAAAAAAAGABUAAwACAAEAAAAGABYAAwADAAIAAAAGABcAAwADAAMAAAAHAAAAAwADAAAAAAAHAAEAAwADAAEAAAAHAAIAAwADAAIAAAAHAAMAAwADAAMAAAAHAAQAAwADAAIAAAAHAAUAAwADAAMAAAAHAAYAAwACAAIAAAAHAAcAAwACAAMAAAAHAAgAAwACAAIAAAAHAAkAAwACAAMAAAAHAAoAAwACAAIAAAAHAAsAAwACAAMAAAAHAAwAAwADAAIAAAAHAA0AAwADAAMAAAAHAA4AAwACAAIAAAAHAA8AAwACAAMAAAAHABAAAwACAAQAAAAHABEAAwACAAUAAAAHABQAAwADAAAAAAAHABUAAwADAAEAAAAHABYAAwACAAIAAAAHABcAAwACAAMAAAAIAAAAAwACAAAAAAAIAAEAAwACAAEAAAAIAAIAAwACAAIAAAAIAAMAAwACAAMAAAAIAAQAAwACAAIAAAAIAAUAAwACAAMAAAAIAAYAAwADAAIAAAAIAAcAAwADAAMAAAAIAAgAAwADAAIAAAAIAAkAAwADAAMAAAAIAAoAAwADAAIAAAAIAAsAAwADAAMAAAAIAAwAAwACAAIAAAAIAA0AAwACAAMAAAAIAA4AAwADAAIAAAAIAA8AAwADAAMAAAAIABAAAgADAAIAAAAIABEAAwADAAUAAAAIABQAAwACAAAAAAAIABUAAwACAAEAAAAIABYAAwADAAIAAAAIABcAAwADAAMAAAAJAAAAAwADAAAAAAAJAAEAAwADAAEAAAAJAAIAAwADAAIAAAAJAAMAAwADAAMAAAAJAAQAAwADAAIAAAAJAAUAAwADAAMAAAAJAAYAAgADAAIAAAAJAAcAAwACAAMAAAAJAAgAAwACAAIAAAAJAAkAAwACAAMAAAAJAAoAAwACAAIAAAAJAAsAAwACAAMAAAAJAAwAAwADAAIAAAAJAA0AAwADAAMAAAAJAA4AAwACAAIAAAAJAA8AAwACAAMAAAAJABAAAwACAAQAAAAJABEAAwACAAUAAAAJABQAAwADAAAAAAAJABUAAwADAAEAAAAJABYAAwACAAIAAAAJABcAAwACAAMAAAAKAAAAAwACAAAAAAAKAAEAAwACAAEAAAAKAAIAAwACAAIAAAAKAAMAAwACAAMAAAAKAAQAAgACAAIAAAAKAAUAAgACAAMAAAAKAAYAAwADAAMAAAAKAAcAAwADAAMAAAAKAAgAAwADAAIAAAAKAAkAAwADAAMAAAAKAAoAAwADAAIAAAAKAAsAAwADAAMAAAAKAAwAAwACAAIAAAAKAA0AAwACAAMAAAAKAA4AAwADAAIAAAAKAA8AAwADAAMAAAAKABAAAwADAAQAAAAKABEAAwADAAUAAAAKABQAAwACAAAAAAAKABUAAwACAAEAAAAKABYAAwADAAIAAAAKABcAAwADAAMAAAALAAAAAwADAAAAAAALAAEAAwADAAEAAAALAAIAAwADAAIAAAALAAMAAwADAAMAAAALAAQAAgADAAIAAAALAAUAAgADAAMAAAALAAYAAwACAAIAAAALAAcAAwACAAMAAAALAAgAAwACAAIAAAALAAkAAwACAAMAAAALAAoAAwACAAIAAAALAAsAAgACAAMAAAALAAwAAwADAAIAAAALAA0AAwADAAMAAAALAA4AAwACAAIAAAALAA8AAwACAAMAAAALABAAAwACAAQAAAALABEAAwACAAUAAAALABQAAwADAAAAAAALABUAAwADAAEAAAALABYAAwACAAIAAAALABcAAwACAAMAAAAMAAAAAwACAAAAAAAMAAEAAwACAAEAAAAMAAIAAwACAAIAAAAMAAMAAwACAAMAAAAMAAQAAwACAAIAAAAMAAUAAwACAAMAAAAMAAYAAwACAAIAAAAMAAcAAwACAAMAAAAMAAgAAwADAAIAAAAMAAkAAwADAAMAAAAMAAoAAgADAAIAAAAMAAsAAwADAAMAAAAMAAwAAwACAAIAAAAMAA0AAwACAAMAAAAMAA4ABgADAAIAAAAMAA8AAwADAAMAAAAMABAAAwADAAQAAAAMABEAAwADAAUAAAAMABQAAwACAAAAAAAMABUAAwACAAEAAAAMABYAAwADAAIAAAAMABcAAwADAAMAAAANAAAAAwADAAAAAAANAAEAAwADAAEAAAANAAIAAwADAAIAAAANAAMAAwADAAMAAAANAAQAAwADAAIAAAANAAUAAwADAAMAAAANAAYAAwADAAIAAAANAAcAAwADAAMAAAANAAgAAwACAAIAAAANAAkAAwACAAMAAAANAAoAAwACAAIAAAANAAsAAwACAAMAAAANAAwAAwADAAIAAAANAA0AAwADAAMAAAANAA4AAwACAAIAAAANAA8AAwACAAMAAAANABAAAwACAAQAAAANABEAAwACAAUAAAANABQAAwADAAAAAAANABUAAwADAAEAAAANABYAAwACAAIAAAANABcAAwACAAMAAAAOAAAAAwACAAAAAAAOAAEAAwACAAEAAAAOAAIAAwACAAIAAAAOAAMAAwACAAMAAAAOAAQAAwACAAIAAAAOAAUAAwACAAMAAAAOAAYAAwACAAIAAAAOAAcAAwACAAMAAAAOAAgAAwADAAIAAAAOAAkAAwADAAMAAAAOAAoAAwADAAIAAAAOAAsAAwADAAMAAAAOAAwAAwADAAIAAAAOAA0AAwADAAMAAAAOAA4AAwADAAIAAAAOAA8AAwADAAMAAAAOABAAAwADAAQAAAAOABEAAwADAAUAAAAOABQAAwACAAAAAAAOABUAAwACAAEAAAAOABYAAwADAAIAAAAOABcAAwADAAMAAAAPAAAAAwADAAAAAAAPAAEAAwADAAEAAAAPAAIAAwADAAIAAAAPAAMAAwADAAMAAAAPAAQAAwACAAIAAAAPAAUAAwACAAMAAAAPAAYAAwADAAIAAAAPAAcAAwADAAMAAAAPAAgAAwACAAIAAAAPAAkAAwACAAMAAAAPAAoAAwACAAIAAAAPAAsAAwACAAMAAAAPAAwAAwACAAIAAAAPAA0AAwACAAMAAAAPAA4AAwACAAIAAAAPAA8AAwACAAMAAAAPABAAAwACAAQAAAAPABEAAwACAAUAAAAPABQAAwADAAAAAAAPABUAAwADAAEAAAAPABYAAwACAAIAAAAPABcAAwACAAMAAAAQAAAAAwACAAAAAAAQAAEAAwACAAEAAAAQAAIAAwACAAIAAAAQAAMAAwACAAMAAAAQAAQAAwADAAIAAAAQAAUAAwADAAMAAAAQAAYAAgACAAIAAAAQAAcAAwACAAMAAAAQAAgAAwADAAIAAAAQAAkAAwADAAMAAAAQAAoAAwACAAIAAAAQAAsAAwACAAMAAAAQAAwAAwADAAIAAAAQAA0AAwADAAMAAAAQAA4AAwADAAIAAAAQAA8AAwADAAMAAAAQABAAAwADAAQAAAAQABEAAwADAAUAAAAQABQAAwACAAAAAAAQABUAAwACAAEAAAAQABYAAwADAAIAAAAQABcAAwADAAMAAAARAAAAAwADAAAAAAARAAEAAwADAAEAAAARAAIAAwADAAIAAAARAAMAAwADAAMAAAARAAQAAwACAAIAAAARAAUAAwACAAMAAAARAAYAAwADAAIAAAARAAcAAgADAAMAAAARAAgAAwACAAIAAAARAAkAAwACAAMAAAARAAoAAwADAAIAAAARAAsAAwADAAMAAAARAAwAAwACAAIAAAARAA0AAwACAAMAAAARAA4AAwACAAIAAAARAA8AAwACAAMAAAARABAAAwACAAQAAAARABEAAwACAAUAAAARABQAAwADAAAAAAARABUAAwADAAEAAAARABYAAwACAAIAAAARABcAAwACAAMAAAASAAAAAwACAAAAAAASAAEAAwACAAEAAAASAAIAAwACAAIAAAASAAMAAwACAAMAAAASAAQAAwADAAIAAAASAAUAAwADAAMAAAASAAYAAwACAAIAAAASAAcAAwACAAMAAAASAAgAAwADAAIAAAASAAkABgADAAEAAAASAAoAAwACAAIAAAASAAsAAwACAAMAAAASAAwAAwADAAIAAAASAA0AAwADAAMAAAASAA4AAwADAAIAAAASAA8AAwADAAMAAAASABAAAwADAAQAAAASABEAAwADAAUAAAASABQAAwACAAAAAAASABUAAwACAAEAAAASABYAAwADAAIAAAASABcAAwADAAMAAAATAAAAAwADAAAAAAATAAEAAwADAAEAAAATAAIAAwADAAIAAAATAAMAAwADAAMAAAATAAQAAwACAAIAAAATAAUAAwACAAMAAAATAAYAAwADAAIAAAATAAcAAwADAAMAAAATAAgAAwACAAIAAAATAAkAAwACAAMAAAATAAoAAwADAAIAAAATAAsAAwADAAMAAAATAAwAAwACAAIAAAATAA0AAwACAAMAAAATAA4AAwACAAIAAAATAA8AAwACAAMAAAATABAABgACAAQAAAATABEABgACAAUAAAATABQAAwADAAAAAAATABUAAwADAAEAAAATABYAAwACAAIAAAATABcAAwACAAMAAAAUAAAAAwACAAAAAAAUAAEAAwACAAEAAAAUAAIABgACAAIAAAAUAAMABgACAAMAAAAUAAQAAwADAAIAAAAUAAUAAwADAAMAAAAUAAYAAwACAAIAAAAUAAcAAwACAAMAAAAUAAgAAwADAAIAAAAUAAkAAwADAAMAAAAUAAoAAwACAAIAAAAUAAsAAwACAAMAAAAUAAwAAwADAAIAAAAUAA0AAwADAAMAAAAUAA4AAwADAAIAAAAUAA8AAwADAAMAAAAUABAABgADAAQAAAAUABEABgADAAUAAAAUABQAAwACAAAAAAAUABUAAwACAAEAAAAUABYAAwADAAIAAAAUABcAAwADAAMAAAAVAAAAAwADAAAAAAAVAAEAAwADAAEAAAAVAAIABgADAAIAAAAVAAMABgADAAMAAAAVAAQAAwACAAIAAAAVAAUAAwACAAMAAAAVAAYAAwADAAIAAAAVAAcAAwADAAMAAAAVAAgAAwACAAIAAAAVAAkAAwACAAMAAAAVAAoAAwADAAIAAAAVAAsAAwADAAMAAAAVAAwAAgACAAIAAAAVAA0AAgACAAMAAAAVAA4AAwACAAIAAAAVAA8AAwACAAMAAAAVABAAAwACAAQAAAAVABEAAwACAAUAAAAVABQAAwADAAAAAAAVABUAAwADAAEAAAAVABYAAwACAAIAAAAVABcAAwACAAMAAAAWAAAAAwACAAAAAAAWAAEAAwACAAEAAAAWAAIAAwACAAIAAAAWAAMAAwACAAMAAAAWAAQAAwADAAIAAAAWAAUAAwADAAMAAAAWAAYAAwACAAIAAAAWAAcAAwACAAMAAAAWAAgAAwADAAIAAAAWAAkAAwADAAMAAAAWAAoAAwACAAIAAAAWAAsAAwACAAMAAAAWAAwAAgADAAIAAAAWAA0AAgADAAMAAAAWAA4AAwADAAIAAAAWAA8AAwADAAMAAAAWABAAAwADAAQAAAAWABEAAwADAAUAAAAWABQAAwACAAAAAAAWABUAAwACAAEAAAAWABYAAwADAAIAAAAWABcAAwADAAMAAAAXAAAAAwADAAAAAAAXAAEAAwADAAEAAAAXAAIAAgADAAIAAAAXAAMAAwADAAMAAAAXAAQAAwACAAIAAAAXAAUAAwACAAMAAAAXAAYAAwADAAIAAAAXAAcAAwADAAMAAAAXAAgAAwACAAIAAAAXAAkAAwACAAMAAAAXAAoAAwADAAIAAAAXAAsAAwADAAMAAAAXAAwAAwACAAIAAAAXAA0AAwACAAMAAAAXAA4AAwACAAIAAAAXAA8AAwACAAMAAAAXABAAAwACAAQAAAAXABEAAwACAAUAAAAXABQAAwADAAAAAAAXABUAAwADAAEAAAAXABYAAwACAAIAAAAXABcAAwACAAMAAAAYAAAAAwACAAAAAAAYAAEAAwACAAEAAAAYAAIAAwACAAIAAAAYAAMAAwACAAMAAAAYAAQAAwACAAIAAAAYAAUAAwACAAMAAAAYAAYAAwACAAIAAAAYAAcAAwACAAMAAAAYAAgABgABAAIAAAAYAAkAAwADAAMAAAAYAAoAAgADAAIAAAAYAAsAAwACAAMAAAAYAAwAAwADAAIAAAAYAA0AAwADAAMAAAAYAA4AAwADAAIAAAAYAA8AAwADAAMAAAAYABAAAwADAAQAAAAYABEAAwADAAUAAAAYABQAAwACAAAAAAAYABUAAwACAAEAAAAYABYAAwADAAIAAAAYABcAAwADAAMAAAAZAAAAAwADAAAAAAAZAAEAAwADAAEAAAAZAAIAAwADAAIAAAAZAAMAAwADAAMAAAAZAAQAAwADAAIAAAAZAAUAAwACAAIAAAAZAAYAAwADAAIAAAAZAAcAAwADAAMAAAAZAAgAAwACAAIAAAAZAAkAAwACAAMAAAAZAAoAAwACAAIAAAAZAAsAAwACAAMAAAAZAAwAAwACAAIAAAAZAA0AAwACAAMAAAAZAA4AAwACAAIAAAAZAA8AAwACAAMAAAAZABAAAwACAAQAAAAZABEAAwACAAUAAAAZABQAAwACAAAAAAAZABUAAwACAAEAAAAZABYAAwACAAIAAAAZABcAAwACAAMAAAAaAAAAAwACAAAAAAAaAAEAAwACAAEAAAAaAAIAAwACAAIAAAAaAAMAAwACAAMAAAAaAAQAAwAEAAMAAAAaAAUAAwADAAIAAAAaAAYAAwADAAMAAAAaAAcAAwADAAMAAAAaAAgAAwADAAIAAAAaAAkAAwADAAMAAAAaAAoAAwADAAIAAAAaAAsAAwADAAMAAAAaAAwAAwADAAIAAAAaAA0AAwADAAMAAAAaAA4AAwADAAIAAAAaAA8AAwADAAMAAAAaABAAAwADAAQAAAAaABEAAwADAAUAAAAaABQAAwADAAAAAAAaABUAAwADAAEAAAAaABYAAwADAAIAAAAaABcAAwADAAMAAAAbAAAAAwAEAAAAAAAbAAEAAwAEAAEAAAAbAAIAAwAEAAIAAAAbAAMAAwAEAAMAAAAbAAQAAwAEAAMAAAAbAAUAAwAEAAIAAAAbAAYAAwAEAAMAAAAbAAcAAwAEAAIAAAAbAAgAAwAEAAMAAAAbAAkAAwAEAAIAAAAbAAoAAwAEAAMAAAAbAAsAAwAEAAIAAAAbAAwAAwAEAAMAAAAbAA0AAwAEAAIAAAAbAA4AAwAEAAMAAAAbAA8AAwAEAAIAAAAbABAAAwAEAAQAAAAbABEAAwAEAAUAAAAbABQAAwAEAAAAAAAbABUAAwAEAAEAAAAbABYAAwAEAAIAAAAbABcAAwAEAAMAAAAcAAAAAwAFAAAAAAAcAAEAAwAFAAEAAAAcAAIAAwAFAAIAAAAcAAMAAwAFAAMAAAAcAAQAAwAFAAMAAAAcAAUAAwAFAAIAAAAcAAYAAwAFAAMAAAAcAAcABgAFAAQAAAAcAAgAAwAFAAMAAAAcAAkAAwAFAAIAAAAcAAoAAwAFAAMAAAAcAAsAAwAFAAIAAAAcAAwAAwAFAAMAAAAcAA0AAwAFAAIAAAAcAA4AAwAFAAMAAAAcAA8AAwAFAAIAAAAcABAAAwAFAAQAAAAcABEAAwAFAAUAAAAcABQAAwAFAAAAAAAcABUAAwAFAAEAAAAcABYAAwAFAAIAAAAcABcAAwAFAAMAAAAeABAAAgAAAAQAAAAeABEAAgAAAAUAAAAfABAAAgABAAQAAAAfABEAAgABAAUAAAAgABAAAgACAAQAAAAgABEAAgACAAUAAAAhABAAAgACAAQAAAAhABEAAgACAAUAAAAiABAAAgADAAQAAAAiABEAAgACAAUAAAAjABAAAgADAAQAAAAjABEAAgACAAUAAAAAABIAAAAkAAEAAAABABIAAAAkAAEAAAACABIAAAAkAAEAAAADABIAAAAkAAEAAAAEABIAAAAkAAEAAAAFABIAAAAkAAEAAAAGABIAAAAkAAEAAAAHABIAAAAkAAEAAAAIABIAAAAkAAEAAAAJABIAAAAkAAEAAAAKABIAAAAkAAEAAAALABIAAAAkAAEAAAAMABIAAAAkAAEAAAANABIAAAAkAAEAAAAOABIAAAAkAAEAAAAPABIAAAAkAAEAAAAQABIAAAAjAAMAAAARABIAAAAkAAEAAAASABIAAAAkAAEAAAATABIAAAAkAAEAAAAUABIAAAAkAAEAAAAVABIAAAAkAAEAAAAWABIAAAAkAAEAAAAXABIAAAAkAAEAAAAYABIAAAAkAAEAAAAZABIAAAAkAAEAAAAaABIAAAAkAAEAAAAbABIAAAAkAAEAAAAcABIAAAAkAAEAAAAcABMAAAAkAAEAAAAAABMAAAAkAAEAAAABABMAAAAkAAEAAAACABMAAAAkAAEAAAADABMAAAAkAAEAAAAEABMAAAAkAAEAAAAFABMAAAAkAAEAAAAGABMAAAAkAAEAAAAHABMAAAAkAAEAAAAIABMAAAAkAAEAAAAJABMAAAAkAAEAAAAKABMAAAAkAAEAAAALABMAAAAkAAEAAAAMABMAAAAkAAEAAAANABMAAAAkAAEAAAAOABMAAAAkAAEAAAAPABMAAAAkAAEAAAAQABMAAAAkAAEAAAARABMAAAAkAAEAAAASABMAAAAkAAEAAAATABMAAAAkAAEAAAAUABMAAAAkAAEAAAAVABMAAAAkAAEAAAAWABMAAAAkAAEAAAAXABMAAAArAAIAAAAYABMAAAAkAAEAAAAZABMAAAAkAAEAAAAaABMAAAAkAAEAAAAbABMAAAAkAAEAAAAdABIAAAAkAAEAAAAdABMAAAAkAAEAAAAeABIAAAAkAAEAAAAeABMAAAAkAAEAAAAfABIAAAAkAAEAAAAfABMAAAAkAAEAAAAgABIAAAAkAAEAAAAgABMAAAAkAAEAAAAhABIAAAAkAAEAAAAhABMAAAAkAAEAAAAiABIAAAAkAAEAAAAiABMAAAAkAAEAAAAjABIAAAAkAAEAAAAjABMAAAAkAAEAAAAdAAEAAAAkAAEAAAAdAAIAAAAkAAEAAAAdAAMAAAAkAAEAAAAdAAQAAAAkAAEAAAAdAAUAAAAkAAEAAAAdAAYAAAAkAAEAAAAdAAcAAAAkAAEAAAAdAAgAAAAkAAEAAAAdAAkAAAAkAAEAAAAdAAoAAAAkAAEAAAAdAAsAAAArAAEAAAAdAAwAAAAkAAEAAAAdAA0AAAAkAAEAAAAdAA4AAAAkAAEAAAAdAA8AAAAkAAEAAAAdABAAAAAsAAEAAAAdABEAAAAkAAEAAAAdAAAAAAAkAAEAAAA=")
tile_set = ExtResource("1_gcyph")

[node name="ground_decoration" type="TileMapLayer" parent="tile_layers"]
tile_map_data = PackedByteArray("AAAAAAAACgAKAAgAAAAAAAEACgAKAAkAAAAAAAIACgAKAAkAAAAAAAMACgAKAAkAAAAAAAQACgAKAAkAAAAAAAUACgAKAAkAAAAAAAYACgAKAAkAAAAAAAcACgAKAAkAAAAAAAgACgAKAAkAAAAAAAkACgAKAAkAAAAAAAoACgAKAAkAAAAAAAsACgAKAAkAAAAAAAwACgAKAAoAAAAAAA8ABAACAAEAAAAAABEACQAAAAAAAAABAAAACgALAAgAAAABAAEACgAHAAMAAAABAAIACgAHAAMAAAABAAMACgAHAAMAAAABAAQACgAHAAMAAAABAAUACgAHAAMAAAABAAYACgAHAAMAAAABAAcACgAHAAMAAAABAAgACgAHAAMAAAABAAkACgAHAAMAAAABAAoACgAHAAMAAAABAAsACgALAAUAAAABAAwACgALAAoAAAABAA4ABAADAAAAAAABAA8ABAADAAEAAAABABEACQABAAAAAAACAAAACgALAAgAAAACAAEACgAHAAMAAAACAAIACgALAAUAAAACAAMACgAHAAMAAAACAAQACgAHAAMAAAACAAUACgAHAAMAAAACAAYACgAHAAMAAAACAAcACgAHAAMAAAACAAgACgAHAAMAAAACAAkACgAHAAMAAAACAAoACgAHAAMAAAACAAsACgAHAAMAAAACAAwACgALAAoAAAACABEACQAAAAAAAAADAAAACgALAAgAAAADAAEACgAHAAMAAAADAAMACgAHAAMAAAADAAQACgAHAAMAAAADAAUACgAHAAMAAAADAAYACgAHAAMAAAADAAcACgAHAAMAAAADAAgACgAHAAMAAAADAAkACgAHAAMAAAADAAoACgAHAAMAAAADAAsACgAHAAMAAAADAAwACgALAAoAAAADAA4ABAABAAIAAAADABEACQABAAAAAAAEAAAACgALAAgAAAAEAAEACgAHAAMAAAAEAAIACgAHAAMAAAAEAAMACgAHAAMAAAAEAAQACgAHAAMAAAAEAAUACgAHAAMAAAAEAAYACgAHAAMAAAAEAAcACgAHAAMAAAAEAAgACgAHAAMAAAAEAAkACgAHAAMAAAAEAAoACgAHAAMAAAAEAAsACgAHAAMAAAAEAAwACgAHAAkAAAAEAA0ACgAHAAkAAAAEAA4ACgAHAAkAAAAEAA8ACgAHAAkAAAAEABAACgAHAAkAAAAEABEACgAHAAkAAAAFAAAACgALAAgAAAAFAAEACgAHAAMAAAAFAAIACgAHAAMAAAAFAAMACgAHAAMAAAAFAAQACgAHAAMAAAAFAAUACgAHAAMAAAAFAAYACgAHAAMAAAAFAAcACgAHAAMAAAAFAAgACgAHAAMAAAAFAAkACgAHAAMAAAAFAAoACgAHAAMAAAAFAAsACgAHAAMAAAAFAAwACgAFAAkAAAAFAA0ACgAFAAkAAAAFAA4ACgAFAAkAAAAFAA8ACgAFAAkAAAAFABAACgAFAAkAAAAFABEACgAFAAkAAAAGAAAACgALAAgAAAAGAAEACgAHAAMAAAAGAAIACgAHAAMAAAAGAAMACgAHAAMAAAAGAAQACgAHAAMAAAAGAAUACgAHAAMAAAAGAAYACgAHAAMAAAAGAAcACgAHAAMAAAAGAAgACgAHAAMAAAAGAAkACgAHAAMAAAAGAAoACgAHAAMAAAAGAAsACgAHAAMAAAAGAAwACgALAAoAAAAGAA0ACgAKAAgAAAAGAA4ACgAKAAkAAAAGAA8ACgAKAAoAAAAGABEACQAAAAAAAAAHAAAACgAMAAgAAAAHAAEACgAMAAkAAAAHAAIACgAMAAkAAAAHAAMACgAMAAkAAAAHAAQACgAMAAkAAAAHAAUACgAMAAkAAAAHAAYACgAMAAkAAAAHAAcACgAMAAkAAAAHAAgACgAMAAkAAAAHAAkACgAMAAkAAAAHAAoACgAMAAkAAAAHAAsACgAMAAkAAAAHAAwACgAMAAoAAAAHAA0ACgALAAgAAAAHAA4ACgALAAkAAAAHAA8ACgALAAoAAAAHABEACQABAAAAAAAIAAIACQAAAAAAAAAIAAoACwAAAAEAAAAIAA0ACgAMAAgAAAAIAA4ACgAMAAkAAAAIAA8ACgAMAAoAAAAJAAIACQABAAAAAAAKAAYADQACAAMAAAALABAABgAAAAAAAAAMAAEACgAKAAgAAAAMAAIACgAKAAkAAAAMAAMACgAKAAkAAAAMAAQACgAKAAkAAAAMAAUACgAKAAoAAAAMAAcADQAEAAQAAAAMAAsABAACAAIAAAAMAAwABAACAAMAAAAMAA4ACgAAAAgAAAAMAA8ACgAAAAkAAAAMABAACgAAAAoAAAANAAEACgALAAgAAAANAAIACgALAAkAAAANAAMACgALAAkAAAANAAQACgALAAkAAAANAAUACgALAAoAAAANAAsABAADAAIAAAANAAwABAADAAMAAAANAA4ACgABAAgAAAANAA8ACgABAAkAAAANABAACgABAAoAAAAOAAEACgALAAgAAAAOAAIACgALAAkAAAAOAAMACgALAAkAAAAOAAQACgALAAkAAAAOAAUACgALAAoAAAAOAA4ACgABAAgAAAAOAA8ACgABAAkAAAAOABAACgABAAoAAAAPAAEACgALAAgAAAAPAAIACgALAAkAAAAPAAMACgALAAkAAAAPAAQACgALAAkAAAAPAAUACgALAAoAAAAPAAsABwABAAEAAAAPAA4ACgACAAgAAAAPAA8ACgACAAkAAAAPABAACgACAAoAAAAQAAEACgAMAAgAAAAQAAIACgAMAAkAAAAQAAMACgAMAAkAAAAQAAQACgAMAAkAAAAQAAUACgAMAAoAAAAQAAYACwABAAAAAAARAAsACwABAAEAAAARAA4ABgAAAAAAAAARAA8ABgAAAAEAAAARABAACwAAAAAAAAASAA4ABgABAAAAAAASAA8ABgABAAEAAAATAAMACgAKAAgAAAATAAQACgAKAAkAAAATAAUACgAKAAkAAAATAAYACgAKAAoAAAAUAAMACgALAAgAAAAUAAQACgALAAkAAAAUAAUACgALAAkAAAAUAAYACgALAAoAAAAUABAACwAAAAEAAAAVAAMACgALAAgAAAAVAAQACgALAAkAAAAVAAUACgALAAkAAAAVAAYACgALAAoAAAAWAAMACgALAAgAAAAWAAQACgALAAkAAAAWAAUACgALAAkAAAAWAAYACgALAAoAAAAWAAcABwABAAAAAAAXAAMACgAMAAgAAAAXAAQACgAMAAkAAAAXAAUACgAMAAkAAAAXAAYACgAMAAoAAAAXAAoACwAAAAAAAAAZAAoABAACAAAAAAAZAAsABAACAAEAAAAaAAoABAADAAAAAAAaAAsABAADAAEAAAAaAA8ACwAAAAEAAAAbAAMACwABAAEAAAAbAA0ABwABAAEAAAAbABAABAAAAAIAAAAbABEABAAAAAMAAAAcAAQACgAUABAAAAAcAAUACgAUABEAAAAcAAsACgAVABAAAAAcAAwACgAVABEAAAAcABAABAABAAIAAAAcABEABAABAAMAAAAbAAYACgABAAMAAAAcAAIACgDJACEAAAA=")
tile_set = ExtResource("2_1rjl6")

[node name="building_obstacles_1" type="TileMapLayer" parent="tile_layers"]
tile_map_data = PackedByteArray("AAAAAAAAAQAAABIAAAAAAAEAAQAAABMAAAAAAAIAAQAAABMAAAAAAAMAAQAAABMAAAAAAAQAAQAAABMAAAAAAAUAAQAAABMAAAAAAAYAAQAAABMAAAAAAAcAAQAAABMAAAAAAAgAAQAAABMAAAAAAAkAAQAAABMAAAAAAAoAAQAAABMAAAAAAAsAAQAAABMAAAAAAAwAAQAAABMAAAAAAA0AAQAAABQAAAABAA0AAQABABQAAAACAA0AAQABABQAAAADAA0AAQABABQAAAAFAAAAAQABABIAAAAGAAAAAQABABIAAAAGAA0AAQABABQAAAAHAAAAAQACABIAAAAHAAEAAQACABMAAAAHAAIAAQACABMAAAAHAAMAAQACABMAAAAHAAQAAQACABMAAAAHAAUAAQACABMAAAAHAAYAAQACABMAAAAHAAcAAQACABMAAAAHAAgAAQACABMAAAAHAAkAAQACABMAAAAHAAoAAQACABMAAAAHAAsAAQACABMAAAAHAAwAAQACABMAAAAHAA0AAQACABQAAAABAAAAAQABABIAAAACAAAAAQABABIAAAADAAAAAQABABIAAAAEAAAAAQABABIAAAA=")
tile_set = ExtResource("3_u2bwb")

[node name="building_obstacles_2" type="TileMapLayer" parent="tile_layers"]
tile_map_data = PackedByteArray("AAABAAAAAQBaACgAAAABAAEAAQBaACkAAAABAAIAAQBaACoAAAABAAMAAQBaACsAAAABAAUAAQAtACkAAAABAAYAAQAtACoAAAABAAcAAQAtACsAAAABAAgAAQBLACgAAAABAAkAAQBLACkAAAABAAoAAQBLACoAAAABAAsAAQBLACsAAAACAAAAAQBbACgAAAACAAEAAQBbACkAAAACAAIAAQBbACoAAAACAAMAAQBbACsAAAACAAUAAQAuACkAAAACAAYAAQAuACoAAAACAAcAAQAuACsAAAACAAgAAQBMACgAAAACAAkAAQBMACkAAAACAAoAAQBMACoAAAACAAsAAQBMACsAAAADAAAAAQBcACgAAAADAAEAAQBcACkAAAADAAIAAQBcACoAAAADAAMAAQBcACsAAAADAAUAAQAvACkAAAADAAYAAQAvACoAAAADAAcAAQAvACsAAAADAAgAAQBNACgAAAADAAkAAQBNACkAAAADAAoAAQBNACoAAAADAAsAAQBNACsAAAADABAAAQAHADQAAAADABEAAQAHADUAAAAEAAAAAQBdACgAAAAEAAEAAQBdACkAAAAEAAIAAQBdACoAAAAEAAMAAQBdACsAAAAEAAUAAQAwACkAAAAEAAYAAQAwACoAAAAEAAcAAQAwACsAAAAEAAkAAQBOACkAAAAEAAoAAQBOACoAAAAEAAsAAQBOACsAAAAFAAEAAQBeACkAAAAFAAIAAQBeACoAAAAFAAMAAQBeACsAAAAFAAUAAQAxACkAAAAFAAYAAQAxACoAAAAFAAcAAQAxACsAAAAFAAkAAQBPACkAAAAFAAoAAQBPACoAAAAFAAsAAQBPACsAAAAHAA8AAQAOAB4AAAAHABAAAQAOAB8AAAAIAAsABgAAAAAAAAAIAAwABgAAAAEAAAAIAA0ABgAAAAIAAAAIAA8AAQAPAB4AAAAIABAAAQAPAB8AAAAJAAAAAQBvADkAAAAJAAEAAQBvADoAAAAJAAIAAQCQACAAAAAJAAMAAQCQACEAAAAJAAsABgABAAAAAAAJAAwABgABAAEAAAAJAA0ABgABAAIAAAAKAAAAAQBwADkAAAAKAAEAAQBwADoAAAAKAAYABgAAAAAAAAAKAAcABgAAAAEAAAAKAAgABgAAAAIAAAAKAAsABgACAAAAAAAKAAwABgACAAEAAAAKAA0ABgACAAIAAAAKAA4AAQAQABwAAAAKAA8AAQAQAB0AAAALAAAAAQBxADkAAAALAAEAAQBxADoAAAALAAYABgABAAAAAAALAAcABgABAAEAAAALAAgABgABAAIAAAALAA4AAQARABwAAAALAA8AAQARAB0AAAAMAAAAAQByADkAAAAMAAEAAQByADoAAAAMAAYABgACAAAAAAAMAAcABgACAAEAAAAMAAgABgACAAIAAAANAAkABgAAAAAAAAANAAoABgAAAAEAAAANAAsABgAAAAIAAAAOAAAAAQAXADQAAAAOAAEAAQAXADUAAAAOAAkABgABAAAAAAAOAAoABgABAAEAAAAOAAsABgABAAIAAAAOAA8ABwAAAAEAAAAOABAABwAAAAIAAAAOABEABwAAAAMAAAAPAAAAAQAYADQAAAAPAAEAAQAYADUAAAAPAAkABgACAAAAAAAPAAoABgACAAEAAAAPAAsABgACAAIAAAAPAA4ABwABAAAAAAAPAA8ABwABAAEAAAAPABAABwABAAIAAAAPABEABwABAAMAAAAQAA4ABwACAAAAAAAQAA8ABwACAAEAAAAQABAABwACAAIAAAAQABEABwACAAMAAAARAAEABAAAAAAAAAARAAIABAAAAAEAAAARAAMABAAAAAIAAAARAAQABAAAAAMAAAARAA8ABwADAAEAAAARABAABwADAAIAAAARABEABwADAAMAAAASAAEABAABAAAAAAASAAIABAABAAEAAAASAAMABAABAAIAAAASAAQABAABAAMAAAASAAoABAAAAAAAAAASAAsABAAAAAEAAAASAAwABAAAAAIAAAASAA0ABAAAAAMAAAATAAEABAACAAAAAAATAAIABAACAAEAAAATAAMABAACAAIAAAATAAQABAACAAMAAAATAAoABAABAAAAAAATAAsABAABAAEAAAATAAwABAABAAIAAAATAA0ABAABAAMAAAAUAAMAAQBoAAcAAAAUAAQAAQBoAAgAAAAUAAoABAACAAAAAAAUAAsABAACAAEAAAAUAAwABAACAAIAAAAUAA0ABAACAAMAAAAVAAEACAAAAAAAAAAVAAIACAAAAAEAAAAWAAEACAABAAAAAAAWAAIACAABAAEAAAAWAA0AAQAAAEsAAAAWAA4AAQAAAEwAAAAWAA8AAQAAAE0AAAAXAP//AQAzAEwAAAAXAAAAAQAzAE0AAAAXAAEAAQAzAE4AAAAXAAIAAQAzAE8AAAAXAAQABQAAAAAAAAAXAAUABQAAAAEAAAAXAAYABQAAAAIAAAAXAAcABQAAAAMAAAAXAA0AAQABAEsAAAAXAA4AAQABAEwAAAAXAA8AAQABAE0AAAAYAP//AQA0AEwAAAAYAAAAAQA0AE0AAAAYAAEAAQA0AE4AAAAYAAIAAQA0AE8AAAAYAAQABQABAAAAAAAYAAUABQABAAEAAAAYAAYABQABAAIAAAAYAAcABQABAAMAAAAYAA0AAQACAEsAAAAYAA4AAQACAEwAAAAYAA8AAQACAE0AAAAZAP//AQA1AEwAAAAZAAAAAQA1AE0AAAAZAAEAAQA1AE4AAAAZAAIAAQA1AE8AAAAZAAQABQACAAAAAAAZAAUABQACAAEAAAAZAAYABQACAAIAAAAZAAcABQACAAMAAAAZAA0AAQADAEsAAAAZAA4AAQADAEwAAAAZAA8AAQADAE0AAAAZABAAAQAAADMAAAAZABEAAQAAADQAAAAZABIAAQAAADUAAAAaAP//AQA2AEwAAAAaAAAAAQA2AE0AAAAaAAEAAQA2AE4AAAAaAAIAAQA2AE8AAAAaAAQABQADAAAAAAAaAAUABQADAAEAAAAaAAYABQADAAIAAAAaAAcABQADAAMAAAAaABAAAQABADMAAAAaABEAAQABADQAAAAaABIAAQABADUAAAAbAP//AQA3AEwAAAAbAAAAAQA3AE0AAAAbAAEAAQA3AE4AAAAbAAIAAQA3AE8AAAAbAA8AAQBrADoAAAAbABAAAQACADMAAAAbABEAAQACADQAAAAbABIAAQACADUAAAAcAP//AQA4AEwAAAAcAAAAAQA4AE0AAAAcAAEAAQA4AE4AAAAcAAIAAQA4AE8AAAAcABAAAQADADMAAAAcABEAAQADADQAAAAcABIAAQADADUAAAABAAQAAQAtACgAAAACAAQAAQAuACgAAAADAAQAAQAvACgAAAAEAAQAAQAwACgAAAAFAAQAAQAxACgAAAA=")
tile_set = ExtResource("3_u2bwb")

[node name="building_decoration" type="TileMapLayer" parent="tile_layers"]
tile_map_data = PackedByteArray("AAAAAA4ABwAAAAAAAAAAAA8ABwAAAAEAAAABAA4ABwABAAAAAAABAA8ABwABAAEAAAACAA0ACAAAAAAAAAACAA4ACAAAAAEAAAADAA0ACAABAAAAAAADAA4ACAABAAEAAAAHAAUAAQAAAAEAAAAHAAYAAQAAAAIAAAAIAAQAAQABAAAAAAAIAAUAAQABAAEAAAAIAAYAAQABAAIAAAAJAAQAAQACAAAAAAAJAAUAAQACAAEAAAAJAAYAAQACAAIAAAAJAAcAAQACAAMAAAAKAAQAAQADAAAAAAAKAAUAAQADAAEAAAAKAAYAAQADAAIAAAAKAAcAAQADAAMAAAAKAAgAAQADAAQAAAAKAAkAAQADAAUAAAALAAQAAQAEAAAAAAALAAUAAQAEAAEAAAALAAgAAQAEAAQAAAALAAkAAQAEAAUAAAAMAAEACAAAAAAAAAAMAAIACAAAAAEAAAANAAEACAABAAAAAAANAAIACAABAAEAAAANAAQABgARACAAAAAOAAQABgASACAAAAAPAAIABgARACEAAAAPAAQABgAPACAAAAARAA0ABwAAAAAAAAARAA4ABwAAAAEAAAASAA0ABwABAAAAAAASAA4ABwABAAEAAAATAAAAAAABAAAAAAATAAEAAAABAAEAAAATAAQAAAABAAQAAAATAAUAAAABAAUAAAATAAwABAABAAEAAAATAA0ABAABAAIAAAATAA4ABAABAAMAAAATAA8ABAABAAQAAAATABAABAABAAUAAAATABEABAABAAYAAAAUAAAAAAACAAAAAAAUAAEAAAACAAEAAAAUAAIAAAACAAIAAAAUAAMAAAACAAMAAAAUAAQAAAACAAQAAAAUAAUAAAACAAUAAAAUAAwABAACAAEAAAAUAA0ABAACAAIAAAAVAAAAAAADAAAAAAAVAAEAAAADAAEAAAAVAAIAAAADAAIAAAAVAAMAAAADAAMAAAAVAAQABgARACAAAAAVAAwABAADAAEAAAAVAA0ABAADAAIAAAAVAA4ABAADAAMAAAAWAAAAAAAEAAAAAAAWAAEAAAAEAAEAAAAWAAIAAAAEAAIAAAAWAAUABgAQACEAAAAWAAwABAAEAAEAAAAWAA0ABAAEAAIAAAAWAA4ABAAEAAMAAAAXAAEAAAAFAAEAAAAXAAIAAAAFAAIAAAAXAAwABAAFAAEAAAAXAA0ABAAFAAIAAAAXAA4ABAAFAAMAAAAXAA8ABAAFAAQAAAAXABAABAAFAAUAAAAYAAwABAAGAAEAAAAYAA0ABAAGAAIAAAAYAA4ABAAGAAMAAAAYAA8ABAAGAAQAAAAYABAABAAGAAUAAAAYABEABAAGAAYAAAAaAAcABwAAAAAAAAAaAAgABwAAAAEAAAAbAAcABwABAAAAAAAbAAgABwABAAEAAAA=")
tile_set = ExtResource("4_ymuvs")

[node name="decoration" type="TileMapLayer" parent="tile_layers"]
tile_map_data = PackedByteArray("AAAcABUAAQAKAAEAAAASABcAAQAAAAAAAAASABgAAQAAAAEAAAATABMAAACuAJwAAAATABcAAQABAAAAAAATABgAAQABAAEAAAAUABMAAACvAJwAAAAWAA4AAADeAHgAAAAWAA8AAADeAHkAAAAXAA4AAADfAHgAAAAXAA8AAADfAHkAAAAcABQAAQAKAAAAAAAdABIAAQAKAAAAAAAdABMAAQAKAAEAAAAdABQAAQALAAAAAAAdABUAAQALAAEAAAAeABIAAQALAAAAAAAeABMAAQALAAEAAAA=")
tile_set = ExtResource("5_ly7i8")

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="0" type="Marker2D" parent="SpawnPoints"]
position = Vector2(32, 608)

[node name="1" type="Marker2D" parent="SpawnPoints"]
position = Vector2(96, 608)

[node name="2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(32, 672)

[node name="3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(96, 672)
